--- a/lib/phusion_passenger/templates/app_init_error.html.erb
+++ b/lib/phusion_passenger/templates/app_init_error.html.erb
@@ -1,5 +1,5 @@
-<% layout 'error_layout', :title => "#{@app_name} application could not be started" do %>
-<h1 class="error_title"><%= @app_name %> application could not be started</h1>
+<% layout 'error_layout', :title => "application could not be started" do %>
+<h1 class="error_title">application could not be started</h1>
 <div id="content">
 
 	These are the possible causes:
@@ -42,23 +42,5 @@
 	Further information about the error may have been written to the
 	application's log file. Please check it in order to analyse the problem.
 	
-	<dl>
-	<dt>Error message:</dt>
-	<dd><%=h @error.child_exception.message %></dd>
-	
-	<dt>Exception class:</dt>
-	<dd><%=h @error.child_exception.class %></dd>
-	
-	<dt>Application root:</dt>
-	<dd>
-		<tt class="filename"><%=h @app_root %></tt>
-	</dd>
-	
-	<dt>Backtrace:</dt>
-	<dd>
-		<%= backtrace_html_for(@error.child_exception) %>
-	</dd>
-	</dl>
-
 </div>
 <% end %>
